objects/Group_Affiliation__c.object
<CustomObject>
    <description>Junction object between the many to many relationship of the Account and Group objects</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Associated Account for this Group Affiliation</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Organization Group Affiliations</relationshipLabel>
        <relationshipName>Group_Affiliations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checkbox indicating if the Group Affiliation between an Account and a Group is active or not. This will allow for history tracking of group members</description>
        <inlineHelpText>This field indicates if the Affiliation between the Dealership and Group is live. By unchecking this box you will remove the Dealership from the Group.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_ID__c</fullName>
        <description>Dealer ID of the Associated Account - this field was added for ease of use while on the organization group  record list view.</description>
        <formula>Account__r.Dealership_ID__c</formula>
        <label>Dealer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <description>Relationship between this junction object and the Group object</description>
        <label>Group</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipName>Group_Affiliations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Lead_Id_Text__c</fullName>
        <label>Lead Id Text</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Organization Group Affiliations</relationshipLabel>
        <relationshipName>Organization_Group_Affiliations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Major_Account__c</fullName>
        <description>Indicates on the Affiliation if the Parent Group is a Major Account</description>
        <formula>Group__r.Major_Account__c &amp;&amp; Group__r.Active__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Major Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unique_Affiliation__c</fullName>
        <description>Field used to prevent duplication by concatenating the Ids of the Group and Account associated with this Affiliation</description>
        <label>Unique Affiliation</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Organization Group Affiliation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Group__c</columns>
        <columns>Major_Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Parent_Affiliation_List</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Active__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Group__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>Iman</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>6/1/2020 12:00 AM</value>
        </filters>
        <label>Parent Affiliation List</label>
    </listViews>
    <nameField>
        <displayFormat>GA-{00000}</displayFormat>
        <label>Group Affiliation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Organization Group Affiliations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Standard_Account_must_have_Org_ID</fullName>
        <active>true</active>
        <description>This validation will prevent creation of an affiliation to a Standard Account that does not have its Dealership_Id__c populated (Org ID)</description>
        <errorConditionFormula>Account__r.RecordType.DeveloperName=&apos;Standard&apos; &amp;&amp; IsBlank(Account__r.Dealership_ID__c)</errorConditionFormula>
        <errorMessage>Group affiliation to a Standard Account type must have a Dealership Id</errorMessage>
    </validationRules>
</CustomObject>